set version to 2.0.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-11-02 Christian Deussen <deussen@portrino.de>
+
+	* adds row_per_cylce feature. version 2.0.1
+
 2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Released version 2.0.0, resolves #76004
